syntax = "proto3";

package mikebway.cart;

import "google/type/money.proto";

option go_package = "github.com/mikebway/poc-gcp-ecomm/pb/cart";

// CartItem represents a single entry in an order. An order will contain one
// to many order items.
message CartItem {
  // A UUID ID in hexadecimal string form - a unique ID for this item.
  // This will be set by the cart when the item is added to the shopper's cart
  string id = 1;

  // The UUID ID (as a hexadecimal string) of the shopping cart that this item belongs to
  string cart_id = 2;

  // Product code is the equivalent of a SKU code identifying the type of
  // product or service being ordered.
  string product_code = 3;

  // Quantity is the number of this item type that is being ordered.
  int32 quantity = 4;

  // The unit price is the price that the customer was shown for a single item
  // when they selected the item for their cart
  google.type.Money unit_price = 5;
}
